		* Tufte's "range frames" - a new mode in Axis to automatically set the start and end points of the axis to the min and max data points
		* Allow to specify which curves should be shown in the plot legend
		* Switched to Poppler for better LaTeX typesetting support

Bug fixes:
	* Fitting: Fix missing locale support in evaluating range of fit function
	* Fix crash in convolution and correlation
	* Windows: use breeze as default for better dark mode
	* Properly save the geometry of visible windows in the project
	* Interpolation: avoid crash when x data contains invalid data points or is not strictly increasing

-----2.8.2 (01.04.2021) -----
Bug fixes:
	* [CAS]
		* Fixed the regression introduced after the python2 backend was deprecated in Cantor
		* Warn about the potential data looses when a project with CAS content is opened but no CAS support is available
	* [worksheet]:
		* DateTime support for Custom Points and for Histograms
		* Fix "power of" notations for negative values, show "0" for zero and improve auto precision for small values for axis labels
		* Show all available symbols styles for CustomPoint, the last one was missing
		* Convert the plot range format to datetime also when the first histogram for datetime data was added to the plot
		* Properly restore the saved values column and also save the values formatting properties in the histogram
		* If the deleted columns are being restored, restore the column pointers also in the histograms
		* Properly react in the histogram when data columns are deleted or renamed
		* Save/load the values format in xy-curve
		* React on text changes for values prefix and suffix and not on return pressed event in the curve properties explorer
		* Fix log scale axis for one tick and ln-scale typo
		* Fix sqrt and square axis scale
		* adjust the range format (numeric vs. datetime) also when the the column of the first curve is changed and not only when a new curve is added